feat: implementacion de nuevo prototipo Component y implementacion de libreria de uuid

--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,8 @@
       <button class="primary-button">Pagar</button>
     </aside>
 
-    <aside class="product-detail-article inactive">
-      <div class="product-detail-article-close">
+    <aside class="product-detail-article inactive" data-detail="enactive">
+      <div id="button-close" class="product-detail-article-close">
         <img src="./assets/icons/icon_close.png" alt="close" />
       </div>
       <img id="image-product" src="" alt="" />
@@ -94,7 +94,7 @@
           With its practical position, this bike also fulfills a decorative
           function, add your hall or workspace.
         </p>
-        <button class="primary-button add-to-cart-button">
+        <button id="shoppingButton" class="primary-button add-to-cart-button">
           <img src="./assets/icons/bt_add_to_cart.svg" alt="add to cart" />
           Agregar Carrito
         </button>
