--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,7 @@
 
       <div class="navbar-left">
         <img src="./assets/logos/logo_yard_sale.svg" alt="logo" class="logo" />
-
-        <ul id="items-navbar">
-          <!-- 
-            <li>
-              <a href="/">All</a>
-            </li> 
-          -->
-        </ul>
+        <ul id="items-navbar"></ul>
       </div>
 
       <div class="navbar-right">
@@ -101,24 +94,7 @@
       </div>
     </aside>
 
-    <section class="main-container">
-      <div class="cards-container">
-        <!-- <div class="product-card">
-        <img
-          src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-          alt="">
-        <div class="product-info">
-          <div>
-            <p>$120,00</p>
-            <p>Bike</p>
-          </div>
-          <figure>
-            <img src="./assets/icons/bt_add_to_cart.svg" alt="">
-          </figure>
-        </div>
-      </div> -->
-      </div>
-    </section>
+    <section class="main-container"></section>
 
     <script src="./js/bundle.all.js"></script>
   </body>
