fix: ajuste de los elementos de la seccion de Shopping Cart

--- a/src/index.html
+++ b/src/index.html
@@ -69,10 +69,10 @@
         <p>
           <span>Total</span>
         </p>
-        <p>$ 0</p>
+        <p id="total-pagar">$ 0</p>
       </div>
 
-      <button class="primary-button">Pagar</button>
+      <button id="pagar" class="primary-button">Pagar</button>
     </aside>
 
     <aside class="product-detail-article inactive" data-detail="enactive">
