--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <img src="./assets/icons/icon_menu.svg" alt="logo Menu" class="header__menu">
 
       <div class="header__nav">
-        <img src="./assets/logos/logo_yard_sale.svg" alt="logo" class="header__logo">
+        <img id="logo" src="./assets/logos/logo_yard_sale.svg" alt="logo" class="header__logo">
       </div>
 
       <div class="header__shopping">
@@ -28,7 +28,8 @@
           </li>
           <li id="email-shopping" class="shopping__email">
             <span class="shopping__email-icon">U</span>
-            user@example.com
+            <span class="shopping__email-texto">user@example.com</span>
+           
           </li>
 
         </ul>
@@ -211,81 +212,60 @@
         </div>
       </div> -->
 
-      <!--
-      <div class="shopping-my-cart">
 
-    <div class="shopping-my-cart__title-container">
-        <img class="shopping-my-cart__imagen" src="./assets/icons/flechita.svg" alt="arrow">
-        <p class="shopping-my-cart__title">Mi Carrito de Compras</p>
-    </div>
+      <!-- <div class="shopping-my-cart">
 
-    <div class="shoppings">
-        <div class="shopping-cart">
-        <img class="shopping-cart__imagen"
-            src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-            alt="bike">
-
-        <p class="shopping-cart__title">Bike</p>
-        <p class="shopping-cart__price">$30,00</p>
-        <img class="shopping-cart__close" src="./assets/icons/icon_close.png" alt="close">
+        <div class="shopping-my-cart__title-container">
+          <img class="shopping-my-cart__imagen" src="./assets/icons/flechita.svg" alt="arrow">
+          <p class="shopping-my-cart__title">Mi Carrito de Compras</p>
         </div>
 
-        <div class="shopping-cart">
-        <img class="shopping-cart__imagen"
-            src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-            alt="bike">
+        <div class="shopping-my-cart__grid">
+          <div class="shopping-my-cart__menu">
+            <h3 class="shopping-my-cart__title-menu">Menu</h3>
+            <ul class="shopping-my-cart__contenido-menu">
+              <li class="shopping-my-cart__item-menu">Lista de Deseos</li>
+              <li class="shopping-my-cart__item-menu">Favoritos</li>
+              <li class="shopping-my-cart__item-menu">Compras para Despues</li>
+            </ul>
+          </div>
 
-        <p class="shopping-cart__title">Bike</p>
-        <p class="shopping-cart__price">$30,00</p>
-        <img class="shopping-cart__close" src="./assets/icons/icon_close.png" alt="close">
+          <div class="shopping-my-cart__pay-contenido">
+
+            <div class="shoppings">
+
+              <div class="shopping-cart">
+                <img class="shopping-cart__imagen"
+                  src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                  alt="bike">
+                <p class="shopping-cart__title">Bike</p>
+                <p class="shopping-cart__price">$30,00</p>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="shopping-my-cart__pay">
+            <div class="order">
+              <span class="order__title">Total</span>
+              <p class="order__price">$ 560.00</p>
+            </div>
+
+            <div class="buttons-pay">
+              <button class="button button--primary">
+                Limpiar Carrito
+              </button>
+              <button class="button">
+                Continuar Compra
+              </button>
+            </div>
+
+          </div>
         </div>
-        <div class="shopping-cart">
-        <img class="shopping-cart__imagen"
-            src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-            alt="bike">
 
-        <p class="shopping-cart__title">Bike</p>
-        <p class="shopping-cart__price">$30,00</p>
-        <img class="shopping-cart__close" src="./assets/icons/icon_close.png" alt="close">
-        </div>
-
-        <div class="shopping-cart">
-        <img class="shopping-cart__imagen"
-            src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-            alt="bike">
-
-        <p class="shopping-cart__title">Bike</p>
-        <p class="shopping-cart__price">$30,00</p>
-        <img class="shopping-cart__close" src="./assets/icons/icon_close.png" alt="close">
-        </div>
-        <div class="shopping-cart">
-        <img class="shopping-cart__imagen"
-            src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-            alt="bike">
-
-        <p class="shopping-cart__title">Bike</p>
-        <p class="shopping-cart__price">$30,00</p>
-        <img class="shopping-cart__close" src="./assets/icons/icon_close.png" alt="close">
-        </div>
+      </div> -->
     </div>
 
-    <div class="order">
-        <span class="order__title">Total</span>
-        <p class="order__price">$ 560.00</p>
-    </div>
-
-    <div class="buttons">
-        <button class="button button--primary">
-        Limpiar Carrito
-        </button>
-        <button class="button">
-        Continuar Compra
-        </button>
-    </div>
-
-    </div>
-</div>
-     -->
   </main>
 
   <footer class="footer">
